--- a/crates/strategies/uni-tri-arb/Cargo.toml
+++ b/crates/strategies/uni-tri-arb/Cargo.toml
@@ -16,6 +16,7 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 csv = "1.1"
 serde = { version = "1", features = ["derive"] }
+indicatif = "0.17.8"
 uni-bindings = { path = "./bindings" }
 
 
