--- a/crates/strategies/uni-tri-arb/contracts/bindings/Cargo.toml
+++ b/crates/strategies/uni-tri-arb/contracts/bindings/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "uni-bindings"
+name = "uni-tri-arb-bindings"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 ethers = { version = "2", default-features = false, features = ["abigen"] }
+serde = "1"
