--- a/bin/playground/Cargo.toml
+++ b/bin/playground/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "artemis"
+name = "playground"
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -13,7 +13,6 @@ async-trait = "0.1.64"
 artemis-core = { path = "../../crates/artemis-core" }
 futures = "0.3.27"
 uni-tri-arb-strategy = { path = "../../crates/strategies/uni-tri-arb" }
-shared = { path = "../../crates/shared" }
 anyhow = "1.0.70"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
