--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -1,19 +1,16 @@
 [package]
-name = "artemis"
+name = "shared"
 version = "0.1.0"
 edition = "2021"
-license = "MIT OR Apache-2.0"
-
 
 [dependencies]
 ethers = { version = "2", features = ["ws", "rustls"]}
 tokio = { version = "1.18", features = ["full"] }
 dotenv = "0.15.0"
+once_cell = "1.18.0"
 async-trait = "0.1.64"
 artemis-core = { path = "../../crates/artemis-core" }
 futures = "0.3.27"
-uni-tri-arb-strategy = { path = "../../crates/strategies/uni-tri-arb" }
-shared = { path = "../../crates/shared" }
 anyhow = "1.0.70"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
