fix - add get pool address utility

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "bin/artemis",
     "bin/cli",
+    # "bin/playground",
     "crates/artemis-core",
     "crates/generator",
     "crates/strategies/*",
