--- a/bin/playground/Cargo.toml
+++ b/bin/playground/Cargo.toml
@@ -13,6 +13,7 @@ async-trait = "0.1.64"
 artemis-core = { path = "../../crates/artemis-core" }
 futures = "0.3.27"
 uni-tri-arb-strategy = { path = "../../crates/strategies/uni-tri-arb" }
+graph = { path = "../../crates/clients/graph" }
 anyhow = "1.0.70"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
