--- a/crates/strategies/uni-tri-arb/Cargo.toml
+++ b/crates/strategies/uni-tri-arb/Cargo.toml
@@ -19,6 +19,8 @@ serde = { version = "1", features = ["derive"] }
 indicatif = "0.17.8"
 uni-tri-arb-bindings = { path = "./contracts/bindings" }
 serde_json = "1.0"
+cfmms = "0.6.2"
+dashmap = "6.0.1"
 
 
 
