--- a/crates/artemis-core/Cargo.toml
+++ b/crates/artemis-core/Cargo.toml
@@ -7,19 +7,16 @@ edition = "2021"
 
 [dependencies]
 
-## eth
-ethers.workspace = true
-opensea-stream = { git = "https://github.com/FrankieIsLost/opensea-stream-rs"}
-mev-share = "0.1.4"
-ethers-flashbots = { git = "https://github.com/FrankieIsLost/ethers-flashbots", features = ["rustls"] }
-
 ## async
 async-trait = "0.1.64"
 futures = "0.3"
-reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
 tokio = { version = "1.18", features = ["full"] }
 tokio-stream = { version = "0.1", features = ['sync'] }
 jsonrpsee = { version = "0.18", features = ["client", "async-client"] }
+alloy = { version = "0.2", features = ["full"] }
+alloy-sol-types = "0.8.0"
+bindings = { path = "../bindings" }
+
 
 ## misc
 anyhow = "1.0.70"
