--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ethers = { version = "2", features = ["ws", "rustls"]}
+alloy = { version = "0.2", features = ["full"] }
 tokio = { version = "1.18", features = ["full"] }
 dotenv = "0.15.0"
 once_cell = "1.18.0"
