--- a/crates/strategies/uni-tri-arb/Cargo.toml
+++ b/crates/strategies/uni-tri-arb/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ethers = { version = "2", features = ["ws", "rustls"]}
+alloy = { version = "0.2", features = ["full"] }
 tokio = { version = "1.18", features = ["full"] }
 mev-share = "0.1.4"
 async-trait = "0.1.64"
