--- a/crates/strategies/uni-tri-arb/contracts/bindings/Cargo.toml
+++ b/crates/strategies/uni-tri-arb/contracts/bindings/Cargo.toml
@@ -3,8 +3,8 @@ name = "uni-tri-arb-bindings"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-ethers = { version = "2", default-features = false, features = ["abigen"] }
-serde = "1"
+alloy = { git = "http://github.com/alloy-rs/alloy", features = ["sol-types", "contract"] }
+
+[net]
+git-fetch-with-cli = true
