--- a/bin/artemis/Cargo.toml
+++ b/bin/artemis/Cargo.toml
@@ -12,8 +12,11 @@ async-trait = "0.1.64"
 artemis-core = { path = "../../crates/artemis-core" }
 futures = "0.3.27"
 uni-tri-arb-strategy = { path = "../../crates/strategies/uni-tri-arb" }
+bindings = { path = "../../crates/bindings" }
 shared = { path = "../../crates/shared" }
 anyhow = "1.0.70"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 clap = { version = "4.2.5", features = ["derive"] }
+alloy-chains = "0.1.0"
+alloy = "0.2.1"
