--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -10,6 +10,7 @@ dotenv = "0.15.0"
 once_cell = "1.18.0"
 async-trait = "0.1.64"
 artemis-core = { path = "../../crates/artemis-core" }
+alloy-chains = "0.1.27"
 futures = "0.3.27"
 anyhow = "1.0.70"
 tracing = "0.1.37"
