--- a/crates/strategies/uni-tri-arb/Cargo.toml
+++ b/crates/strategies/uni-tri-arb/Cargo.toml
@@ -17,9 +17,12 @@ tracing-subscriber = "0.3.16"
 csv = "1.1"
 serde = { version = "1", features = ["derive"] }
 indicatif = "0.17.8"
-uni-tri-arb-bindings = { path = "./contracts/bindings" }
+# uni-tri-arb-bindings = { path = "./contracts/bindings" }
+bindings = { path = "../../bindings" }
 serde_json = "1.0"
 cfmms = "0.6.2"
+# amms = { path = "http://github.com/darkforestry/amms-rs" }
+amms = "0.6.3"
 dashmap = "6.0.1"
 
 [features]
