feat - filter uniswap-like pools

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
     "integration",
 ]
 
-default-members = ["bin/artemis", "crates/shared", "crates/artemis-core", "crates/bindings"]
+default-members = ["bin/artemis", "bin/cli", "crates/shared", "crates/artemis-core", "crates/bindings"]
 resolver = "2"
 
 [workspace.dependencies]
@@ -23,6 +23,3 @@ panic = 'abort'
 
 [profile.dev]
 panic = 'abort'
-
-[net]
-git-fetch-with-cli = true
