--- a/bin/cli/Cargo.toml
+++ b/bin/cli/Cargo.toml
@@ -13,5 +13,7 @@ clap = { version = "4.2.5", features = ["derive"] }
 tokio = { version = "1.18", features = ["full"] }
 uni-tri-arb-strategy = { path = "../../crates/strategies/uni-tri-arb" }
 shared = { path = "../../crates/shared" }
+alloy-chains = "0.1.0"
+alloy = "0.2.1"
 
 
