--- a/crates/strategies/uni-tri-arb/Cargo.toml
+++ b/crates/strategies/uni-tri-arb/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 alloy = { version = "0.2", features = ["full"] }
+alloy-chains = "0.1.0"
 tokio = { version = "1.18", features = ["full"] }
 mev-share = "0.1.4"
 async-trait = "0.1.64"
@@ -23,6 +24,7 @@ serde_json = "1.0"
 # amms = { path = "http://github.com/darkforestry/amms-rs" }
 amms = "0.6.3"
 dashmap = "6.0.1"
+shared = { path = "../../shared" }
 
 [features]
 integration-tests = []
