--- a/bin/bot/Cargo.toml
+++ b/bin/bot/Cargo.toml
@@ -20,3 +20,5 @@ tracing-subscriber = "0.3.16"
 clap = { version = "4.2.5", features = ["derive"] }
 alloy-chains = "0.1.0"
 alloy = "0.2.1"
+log = "0.4.22"
+env_logger = "0.11.4"
