--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -19,3 +19,5 @@ clap = { version = "4.2.5", features = ["derive"] }
 amms = "0.6.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
+alloy-rpc-types = "0.2.1"
+bindings = { path = "../bindings" }
