--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -16,8 +16,10 @@ anyhow = "1.0.70"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 clap = { version = "4.2.5", features = ["derive"] }
-amms = "0.6.3"
+# amms = "0.6.3"
+amms = { path = "../../crates/amms-rs" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 alloy-rpc-types = "0.2.1"
 bindings = { path = "../bindings" }
+db = { path = "../db" }
