--- a/crates/strategies/uni-tri-arb/Cargo.toml
+++ b/crates/strategies/uni-tri-arb/Cargo.toml
@@ -22,7 +22,8 @@ indicatif = "0.17.8"
 bindings = { path = "../../bindings" }
 serde_json = "1.0"
 # amms = { path = "http://github.com/darkforestry/amms-rs" }
-amms = "0.6.3"
+# amms = "0.6.3"
+amms = { path = "../../amms-rs" }
 dashmap = "6.0.1"
 shared = { path = "../../shared" }
 
