--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -22,4 +22,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 alloy-rpc-types = "0.2.1"
 bindings = { path = "../bindings" }
+types = { path = "../types" }
 db = { path = "../db" }
