--- a/crates/strategies/uni-tri-arb/Cargo.toml
+++ b/crates/strategies/uni-tri-arb/Cargo.toml
@@ -26,6 +26,7 @@ serde_json = "1.0"
 amms = { path = "../../amms-rs" }
 dashmap = "6.0.1"
 shared = { path = "../../shared" }
+db = { path = "../../db" }
 
 [features]
 integration-tests = []
