--- a/crates/strategies/uni-tri-arb/Cargo.toml
+++ b/crates/strategies/uni-tri-arb/Cargo.toml
@@ -27,6 +27,7 @@ amms = { path = "../../amms-rs" }
 dashmap = "6.0.1"
 shared = { path = "../../shared" }
 db = { path = "../../db" }
+types = { path = "../../types" }
 
 [features]
 integration-tests = []
