--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -10,3 +10,4 @@ alloy-chains = "0.1.27"
 db = { path = "../db" }
 alloy = { version = "0.2", features = ["full"] }
 alloy-rpc-types = "0.2.1"
+clap = { version = "4.2.5", features = ["derive"] }
