--- a/bin/cli/Cargo.toml
+++ b/bin/cli/Cargo.toml
@@ -17,7 +17,7 @@ alloy-chains = "0.1.0"
 alloy = "0.2.1"
 dotenv = "0.15.0"
 tracing = "0.1.37"
-tracing-subscriber = "0.3.16"
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 types = { path = "../../crates/types" }
 
 
