--- a/bin/bot/Cargo.toml
+++ b/bin/bot/Cargo.toml
@@ -16,7 +16,7 @@ bindings = { path = "../../crates/bindings" }
 shared = { path = "../../crates/shared" }
 anyhow = "1.0.70"
 tracing = "0.1.37"
-tracing-subscriber = "0.3.16"
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 clap = { version = "4.2.5", features = ["derive"] }
 alloy-chains = "0.1.0"
 alloy = "0.2.1"
