--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rusqlite = { version = "0.32.1", features = ["bundled"] }
-diesel = { version = "2.0.0", features = ["sqlite"] }
+diesel = { version = "2.0.0", features = ["postgres"] }
 diesel_migrations = "2.0.0"
 serde = "1.0.182"
