--- a/bin/cli/Cargo.toml
+++ b/bin/cli/Cargo.toml
@@ -6,15 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+alloy = { workspace = true }
 
 anyhow = "1.0.70"
 generator = { path = "../../crates/generator" }
 clap = { version = "4.2.5", features = ["derive"] }
-tokio = { version = "1.18", features = ["full"] }
+tokio = { version = "1.40.0", features = ["full"] }
 uni-tri-arb-strategy = { path = "../../crates/strategies/uni-tri-arb" }
 shared = { path = "../../crates/shared" }
-alloy-chains = "0.1.0"
-alloy = "0.2.1"
+alloy-chains = { workspace = true }
 dotenv = "0.15.0"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
