--- a/crates/bindings/Cargo.toml
+++ b/crates/bindings/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-alloy = { git = "https://github.com/alloy-rs/alloy", features = ["sol-types", "contract"] }
+alloy = { workspace = true }
