--- a/bin/bot/Cargo.toml
+++ b/bin/bot/Cargo.toml
@@ -6,7 +6,7 @@ license = "MIT OR Apache-2.0"
 
 
 [dependencies]
-tokio = { version = "1.18", features = ["full"] }
+tokio = { version = "1.40.0", features = ["full"] }
 dotenv = "0.15.0"
 async-trait = "0.1.64"
 artemis-core = { path = "../../crates/artemis-core" }
@@ -18,7 +18,7 @@ anyhow = "1.0.70"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 clap = { version = "4.2.5", features = ["derive"] }
-alloy-chains = "0.1.0"
-alloy = "0.2.1"
+alloy-chains = { workspace = true }
+alloy = { workspace = true }
 log = "0.4.22"
 env_logger = "0.11.4"
