--- a/crates/artemis-core/Cargo.toml
+++ b/crates/artemis-core/Cargo.toml
@@ -7,12 +7,13 @@ edition = "2021"
 
 [dependencies]
 
+alloy = { workspace = true }
+
 ## async
 async-trait = "0.1.64"
 futures = "0.3"
-tokio = { version = "1.18", features = ["full"] }
+tokio = { version = "1.40.0", features = ["full"] }
 tokio-stream = { version = "0.1", features = ['sync'] }
-alloy = { version = "0.2", features = ["full"] }
 
 
 ## misc
