--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -4,23 +4,30 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-alloy = { version = "0.2", features = ["full"] }
-tokio = { version = "1.18", features = ["full"] }
+alloy = { workspace = true }
+alloy-rpc-types = { workspace = true }
+
+# alloy = { version = "0.2", features = ["full"] }
+tokio = { version = "1.40.0", features = ["full"] }
 dotenv = "0.15.0"
 once_cell = "1.18.0"
 async-trait = "0.1.64"
 artemis-core = { path = "../../crates/artemis-core" }
-alloy-chains = "0.1.27"
+alloy-chains = { workspace = true }
 futures = "0.3.27"
 anyhow = "1.0.70"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
+foundry-evm = { git = "https://github.com/foundry-rs/foundry.git", branch = "master" }
+revm = { version = "14.0.1", features = [
+  "alloydb",
+] }
 clap = { version = "4.2.5", features = ["derive"] }
 # amms = "0.6.3"
 amms = { path = "../../crates/amms-rs" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
-alloy-rpc-types = "0.2.1"
+# alloy-rpc-types = "0.2.1"
 bindings = { path = "../bindings" }
 types = { path = "../types" }
 db = { path = "../db" }
