--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 [dependencies]
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
-alloy-chains = "0.1.27"
+alloy-chains = { workspace = true }
 db = { path = "../db" }
-alloy = { version = "0.2", features = ["full"] }
-alloy-rpc-types = "0.2.1"
+alloy = { workspace = true }
+alloy-rpc-types = { workspace = true }
 clap = { version = "4.2.5", features = ["derive"] }
