--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ alloy-rpc-types = "0.3.3"
 alloy-consensus = "0.3.3"
 alloy-chains = "0.1.27"
 uniswap_v3_math = { git = "https://github.com/0xKitsune/uniswap-v3-math.git" }
+tokio = { version = "1.40.0", features = ["full"] }
+tracing = "0.1.37"
 
 
 [profile.release]
