--- a/bin/bot/Cargo.toml
+++ b/bin/bot/Cargo.toml
@@ -6,7 +6,7 @@ license = "MIT OR Apache-2.0"
 
 
 [dependencies]
-tokio = { version = "1.40.0", features = ["full"] }
+tokio = { workspace = true }
 dotenv = "0.15.0"
 async-trait = "0.1.64"
 artemis-core = { path = "../../crates/artemis-core" }
@@ -15,7 +15,7 @@ uni-tri-arb-strategy = { path = "../../crates/strategies/uni-tri-arb" }
 bindings = { path = "../../crates/bindings" }
 shared = { path = "../../crates/shared" }
 anyhow = "1.0.70"
-tracing = "0.1.37"
+tracing = { workspace = true }
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 clap = { version = "4.2.5", features = ["derive"] }
 alloy-chains = { workspace = true }
