--- a/crates/artemis-core/Cargo.toml
+++ b/crates/artemis-core/Cargo.toml
@@ -8,14 +8,14 @@ edition = "2021"
 [dependencies]
 
 alloy = { workspace = true }
+tokio = { workspace = true }
 
 ## async
 async-trait = "0.1.64"
 futures = "0.3"
-tokio = { version = "1.40.0", features = ["full"] }
 tokio-stream = { version = "0.1", features = ['sync'] }
 
 
 ## misc
 anyhow = "1.0.70"
-tracing = "0.1.37"
+tracing = { workspace = true }
