--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -8,7 +8,7 @@ alloy = { workspace = true }
 alloy-rpc-types = { workspace = true }
 
 # alloy = { version = "0.2", features = ["full"] }
-tokio = { version = "1.40.0", features = ["full"] }
+tokio = { workspace = true }
 dotenv = "0.15.0"
 once_cell = "1.18.0"
 async-trait = "0.1.64"
@@ -16,7 +16,7 @@ artemis-core = { path = "../../crates/artemis-core" }
 alloy-chains = { workspace = true }
 futures = "0.3.27"
 anyhow = "1.0.70"
-tracing = "0.1.37"
+tracing = { workspace = true }
 tracing-subscriber = "0.3.16"
 foundry-evm = { git = "https://github.com/foundry-rs/foundry.git", branch = "master" }
 revm = { version = "14.0.1", features = [
