--- a/crates/strategies/uni-tri-arb/Cargo.toml
+++ b/crates/strategies/uni-tri-arb/Cargo.toml
@@ -8,12 +8,12 @@ edition = "2021"
 [dependencies]
 alloy = { workspace = true }
 alloy-chains = { workspace = true }
-tokio = { version = "1.40.0", features = ["full"] }
+tokio = { workspace = true }
 mev-share = "0.1.4"
 async-trait = "0.1.64"
 artemis-core = { path = "../../artemis-core" }
 anyhow = "1.0.70"
-tracing = "0.1.37"
+tracing = { workspace = true }
 tracing-subscriber = "0.3.16"
 csv = "1.1"
 serde = { version = "1", features = ["derive"] }
