--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -6,14 +6,20 @@ edition = "2021"
 [dependencies]
 alloy = { workspace = true }
 alloy-rpc-types = { workspace = true }
-
-# alloy = { version = "0.2", features = ["full"] }
+foundry-config = { workspace = true }
+alloy-sol-types = { workspace = true }
+alloy-chains = { workspace = true }
 tokio = { workspace = true }
+
+bindings = { path = "../bindings" }
+types = { path = "../types" }
+db = { path = "../db" }
+amms = { path = "../../crates/amms-rs" }
+artemis-core = { path = "../../crates/artemis-core" }
+
 dotenv = "0.15.0"
 once_cell = "1.18.0"
 async-trait = "0.1.64"
-artemis-core = { path = "../../crates/artemis-core" }
-alloy-chains = { workspace = true }
 futures = "0.3.27"
 anyhow = "1.0.70"
 tracing = { workspace = true }
@@ -23,11 +29,5 @@ revm = { version = "14.0.1", features = [
   "alloydb",
 ] }
 clap = { version = "4.2.5", features = ["derive"] }
-# amms = "0.6.3"
-amms = { path = "../../crates/amms-rs" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
-# alloy-rpc-types = "0.2.1"
-bindings = { path = "../bindings" }
-types = { path = "../types" }
-db = { path = "../db" }
