--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 diesel = { version = "2.0.0", features = ["postgres"] }
 diesel_migrations = "2.0.0"
-serde = "1.0.182"
+serde = { version = "1.0.182", features = ["serde_json"] }
+chrono = { version = "0.4", features = ["serde"] }
