--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 diesel = { version = "2.0.0", features = ["postgres"] }
 diesel_migrations = "2.0.0"
-serde = { version = "1.0.182", features = ["serde_json"] }
+serde = { version = "1" }
+serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
