--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-diesel = { version = "2.0.0", features = ["postgres"] }
+diesel = { version = "2.0.0", features = ["postgres", "serde_json", "chrono"] }
 diesel_migrations = "2.0.0"
-serde = { version = "1" }
+serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
