--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -11,3 +11,4 @@ db = { path = "../db" }
 alloy = { workspace = true }
 alloy-rpc-types = { workspace = true }
 clap = { version = "4.2.5", features = ["derive"] }
+chrono = { version = "0.4", features = ["serde"] }
