--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -18,6 +18,7 @@ db = { path = "../db" }
 amms = { path = "../../crates/amms-rs" }
 artemis-core = { path = "../../crates/artemis-core" }
 
+diesel = { version = "2.0.0", features = ["postgres", "serde_json", "chrono"] }
 dotenv = "0.15.0"
 once_cell = "1.18.0"
 async-trait = "0.1.64"
