--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "bin/bot",
     "bin/cli",
+    "bin/swap",
     "crates/artemis-core",
     "crates/strategies/*",
     "crates/amms-rs",
@@ -11,19 +12,20 @@ members = [
     "crates/types",
 ]
 
-default-members = ["bin/bot", "bin/cli", "crates/shared", "crates/db","crates/artemis-core", "crates/bindings"]
+default-members = ["bin/bot", "bin/cli", "bin/swap", "crates/shared", "crates/db","crates/artemis-core", "crates/bindings"]
 # default-members = ["crates/amms-rs"]
 resolver = "2"
 
 
 [workspace.dependencies]
-alloy = { version = "0.3.3", features = [
+alloy = { version = "0.5.4", features = [
     "full"
 ] }
 alloy-primitives = "0.8"
-alloy-rpc-types = "0.3.3"
-alloy-sol-types = "0.8.3"
-alloy-consensus = "0.3.3"
+alloy-rpc-types = "0.5.4"
+alloy-sol-types = "0.8.6"
+alloy-consensus = "0.5.4"
+alloy-provider = "0.5.4"
 alloy-chains = "0.1.27"
 foundry-config = "0.2.0"
 uniswap_v3_math = { git = "https://github.com/0xKitsune/uniswap-v3-math.git" }
