--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -17,10 +17,10 @@ types = { path = "../types" }
 db = { path = "../db" }
 amms = { path = "../../crates/amms-rs" }
 artemis-core = { path = "../../crates/artemis-core" }
-
 diesel = { version = "2.0.0", features = ["postgres", "serde_json", "chrono"] }
 dotenv = "0.15.0"
 once_cell = "1.18.0"
+reqwest = "0.12.9"
 async-trait = "0.1.64"
 futures = "0.3.27"
 anyhow = "1.0.70"
@@ -33,3 +33,4 @@ revm = { version = "14.0.1", features = [
 clap = { version = "4.2.5", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
+eyre = "0.6.10"
