--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ uniswap_v3_math = { git = "https://github.com/0xKitsune/uniswap-v3-math.git" }
 tokio = { version = "1.40.0", features = ["full"] }
 tracing = "0.1.37"
 async-recursion = "1.0.5"
+eyre = "0.6.10"
 
 
 [profile.release]
