--- a/crates/generator/Cargo.toml
+++ b/crates/generator/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 quote = "1.0.27"
 clap = { version = "4.2.5", features = ["derive"] }
+eyre = { workspace = true }
 anyhow = "1.0.70"
 convert_case = "0.6.0"
 
