--- a/bin/cli/Cargo.toml
+++ b/bin/cli/Cargo.toml
@@ -16,6 +16,7 @@ generator = { path = "../../crates/generator" }
 shared = { path = "../../crates/shared" }
 uni-tri-arb-strategy = { path = "../../crates/strategies/uni-tri-arb" }
 types = { path = "../../crates/types" }
+artemis-core = { path = "../../crates/artemis-core" }
 
 anyhow = "1.0.70"
 clap = { version = "4.2.5", features = ["derive"] }
