--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ tokio = { version = "1.40.0", features = ["full"] }
 tracing = "0.1.37"
 async-recursion = "1.0.5"
 eyre = "0.6.10"
+dotenv = "0.15.0"
+once_cell = "1.19.0"    
 
 
 [profile.release]
