--- a/crates/artemis-core/Cargo.toml
+++ b/crates/artemis-core/Cargo.toml
@@ -12,6 +12,7 @@ tokio = { workspace = true }
 eyre = { workspace = true }
 types = { path = "../types" }
 alloy-chains = { workspace = true }
+dotenv = { workspace = true }
 shared = { path = "../shared" }
 
 
