feat - singleton token manager

--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -15,6 +15,7 @@ eyre = { workspace = true }
 tracing = { workspace = true }
 dotenv = { workspace = true }
 once_cell = { workspace = true }
+lazy_static = "1.4.0"
 
 bindings = { path = "../bindings" }
 types = { path = "../types" }
