--- a/crates/artemis-core/Cargo.toml
+++ b/crates/artemis-core/Cargo.toml
@@ -14,6 +14,7 @@ types = { path = "../types" }
 alloy-chains = { workspace = true }
 dotenv = { workspace = true }
 shared = { path = "../shared" }
+executor-binding = { path = "../executor-binding" }
 
 
 ## async
