--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "crates/artemis-core/src/contracts/lib/contracts"]
 	path = crates/artemis-core/src/contracts/lib/contracts
 	url = https://github.com/aerodrome-finance/contracts
+[submodule "contracts/lib/v3-core"]
+	path = contracts/lib/v3-core
+	url = https://github.com/uniswap/v3-core
+[submodule "contracts/lib/aave-v3-core"]
+	path = contracts/lib/aave-v3-core
+	url = https://github.com/aave/aave-v3-core
