--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -4,6 +4,10 @@ out = "out"
 evm_version = "cancun"
 libs = ["lib"]
 optimizer = false
+fs_permissions = [
+    { access = "read", path = "broadcast" },
+    { access = "read", path = "reports" }
+]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 
