--- a/.gitmodules
+++ b/.gitmodules
@@ -15,7 +15,7 @@
 	url = https://github.com/aerodrome-finance/contracts
 [submodule "contracts/lib/v3-core"]
 	path = contracts/lib/v3-core
-	url = https://github.com/uniswap/v3-core
+	url = https://github.com/Uniswap/v3-core
 [submodule "contracts/lib/aave-v3-core"]
 	path = contracts/lib/aave-v3-core
 	url = https://github.com/aave/aave-v3-core
