--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -23,7 +23,7 @@ types = { path = "../types" }
 db = { path = "../db" }
 amms = { path = "../../crates/amms-rs" }
 diesel = { version = "2.0.0", features = ["postgres", "serde_json", "chrono"] }
-reqwest = "0.12.9"
+reqwest = { version = "0.12.9", features = ["json"] }
 async-trait = "0.1.64"
 futures = "0.3.27"
 anyhow = "1.0.70"
@@ -33,5 +33,8 @@ revm = { version = "14.0.1", features = [
   "alloydb",
 ] }
 clap = { version = "4.2.5", features = ["derive"] }
-serde = { version = "1", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+[dev-dependencies]
+tokio = { version = "1.0", features = ["full"] }
