--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,20 +8,31 @@ members = [
     "crates/amms-rs",
     "crates/db",
     "crates/bindings",
-    "crates/shared", 
+    "crates/shared",
     "crates/types",
     "crates/executor-binding",
+    "crates/odos-client",
+    "crates/encoder-client",
 ]
 
-default-members = ["bin/bot", "bin/cli", "bin/swap", "crates/shared", "crates/db","crates/artemis-core", "crates/bindings", "crates/executor-binding"]
+default-members = [
+    "bin/bot",
+    "bin/cli",
+    "bin/swap",
+    "crates/shared",
+    "crates/db",
+    "crates/artemis-core",
+    "crates/bindings",
+    "crates/executor-binding",
+    "crates/odos-client",
+    "crates/encoder-client",
+]
 # default-members = ["crates/amms-rs"]
 resolver = "2"
 
 
 [workspace.dependencies]
-alloy = { version = "0.6.4", features = [
-    "full"
-] }
+alloy = { version = "0.6.4", features = ["full"] }
 alloy-primitives = "0.8"
 alloy-rpc-types = "0.6.4"
 alloy-sol-types = "0.8.6"
@@ -35,7 +46,7 @@ tracing = "0.1.37"
 async-recursion = "1.0.5"
 eyre = "0.6.10"
 dotenv = "0.15.0"
-once_cell = "1.19.0"    
+once_cell = "1.19.0"
 
 
 [profile.release]
