--- a/crates/addressbook/Cargo.toml
+++ b/crates/addressbook/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "shared"
+name = "addressbook"
 version = "0.1.0"
 edition = "2021"
 
@@ -20,7 +20,6 @@ lazy_static = "1.4.0"
 bindings = { path = "../bindings" }
 executor-binding = { path = "../executor-binding" }
 types = { path = "../types" }
-addressbook = { path = "../addressbook" }
 db = { path = "../db" }
 amms = { path = "../../crates/amms-rs" }
 diesel = { version = "2.0.0", features = ["postgres", "serde_json", "chrono"] }
