--- a/crates/odos-client/Cargo.toml
+++ b/crates/odos-client/Cargo.toml
@@ -17,6 +17,7 @@ dotenv = { workspace = true }
 once_cell = { workspace = true }
 lazy_static = "1.4.0"
 
+addressbook = { path = "../addressbook" }
 bindings = { path = "../bindings" }
 executor-binding = { path = "../executor-binding" }
 types = { path = "../types" }
@@ -30,10 +31,7 @@ futures = "0.3.27"
 anyhow = "1.0.70"
 tracing-subscriber = "0.3.16"
 foundry-evm = { git = "https://github.com/foundry-rs/foundry.git", branch = "master" }
-revm = { version = "14.0.1", features = [
-  "alloydb",
-] }
+revm = { version = "14.0.1", features = ["alloydb"] }
 clap = { version = "4.2.5", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-
