--- a/crates/odos-client/Cargo.toml
+++ b/crates/odos-client/Cargo.toml
@@ -23,7 +23,7 @@ executor-binding = { path = "../executor-binding" }
 types = { path = "../types" }
 db = { path = "../db" }
 shared = { path = "../shared" }
-amms = { path = "../../crates/amms-rs" }
+amms = { path = "../amms" }
 diesel = { version = "2.0.0", features = ["postgres", "serde_json", "chrono"] }
 reqwest = { version = "0.12.9", features = ["json"] }
 async-trait = "0.1.64"
