--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -22,7 +22,7 @@ executor-binding = { path = "../executor-binding" }
 types = { path = "../types" }
 addressbook = { path = "../addressbook" }
 db = { path = "../db" }
-amms = { path = "../../crates/amms-rs" }
+amms = { path = "../amms" }
 diesel = { version = "2.0.0", features = ["postgres", "serde_json", "chrono"] }
 reqwest = { version = "0.12.9", features = ["json"] }
 async-trait = "0.1.64"
