--- a/crates/strategies/uni-tri-arb/Cargo.toml
+++ b/crates/strategies/uni-tri-arb/Cargo.toml
@@ -19,11 +19,10 @@ tracing-subscriber = "0.3.16"
 csv = "1.1"
 serde = { version = "1", features = ["derive"] }
 indicatif = "0.17.8"
-# uni-tri-arb-bindings = { path = "./contracts/bindings" }
 bindings = { path = "../../bindings" }
 serde_json = "1.0"
 addressbook = { path = "../../addressbook" }
-amms = { path = "../../amms-rs" }
+amms = { path = "../../amms" }
 dashmap = "6.0.1"
 shared = { path = "../../shared" }
 db = { path = "../../db" }
