chore - rename crate to engine

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = [
     "bin/bot",
     "bin/cli",
     "bin/swap",
-    "crates/artemis-core",
+    "crates/engine",
     "crates/strategies/*",
     "crates/amms",
     "crates/db",
@@ -23,7 +23,7 @@ default-members = [
     "bin/swap",
     "crates/shared",
     "crates/db",
-    "crates/artemis-core",
+    "crates/engine",
     "crates/bindings",
     "crates/executor-binding",
     "crates/odos-client",
