--- a/bin/swap/Cargo.toml
+++ b/bin/swap/Cargo.toml
@@ -15,7 +15,7 @@ alloy = { workspace = true }
 tracing = { workspace = true }
 dotenv = "0.15.0"
 async-trait = "0.1.64"
-artemis-core = { path = "../../crates/artemis-core" }
+engine = { path = "../../crates/engine" }
 futures = "0.3.27"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 clap = { version = "4.2.5", features = ["derive"] }
