--- a/crates/strategies/uni-tri-arb/Cargo.toml
+++ b/crates/strategies/uni-tri-arb/Cargo.toml
@@ -13,7 +13,7 @@ eyre = { workspace = true }
 tracing = { workspace = true }
 mev-share = "0.1.4"
 async-trait = "0.1.64"
-artemis-core = { path = "../../artemis-core" }
+engine = { path = "../../engine" }
 anyhow = "1.0.70"
 tracing-subscriber = "0.3.16"
 csv = "1.1"
