--- a/bin/cli/Cargo.toml
+++ b/bin/cli/Cargo.toml
@@ -13,7 +13,7 @@ eyre = { workspace = true }
 alloy-primitives = { workspace = true }
 
 shared = { path = "../../crates/shared" }
-uni-tri-arb-strategy = { path = "../../crates/strategies/uni-tri-arb" }
+generalized-arb-strategy = { path = "../../crates/strategies/generalized-arb" }
 types = { path = "../../crates/types" }
 engine = { path = "../../crates/engine" }
 addressbook = { path = "../../crates/addressbook" }
