--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
     "crates/tx-encoder",
     "crates/addressbook",
     "crates/provider",
+    "crates/config",
 ]
 
 default-members = [
