--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -18,6 +18,7 @@ once_cell = { workspace = true }
 lazy_static = "1.4.0"
 
 bindings = { path = "../bindings" }
+config = { path = "../config" }
 executor-binding = { path = "../executor-binding" }
 types = { path = "../types" }
 addressbook = { path = "../addressbook" }
