--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ members = [
     "crates/tx-encoder",
     "crates/addressbook",
     "crates/provider",
-    "crates/config",
+    "crates/config", "crates/lifi-client",
 ]
 
 default-members = [
