--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -13,6 +13,7 @@ lazy_static = "1.4.0"
 
 types = { path = "../types" }
 db = { path = "../db" }
+provider = { path = "../provider" }
 diesel = { version = "2.0.0", features = ["postgres", "serde_json", "chrono"] }
 reqwest = { version = "0.12.9", features = ["json"] }
 async-trait = "0.1.64"
