refactor - deprecate usage of config in favor of provider crate

--- a/bin/bot/Cargo.toml
+++ b/bin/bot/Cargo.toml
@@ -11,7 +11,7 @@ eyre = { workspace = true }
 
 generalized-arb-strategy = { path = "../../crates/strategies/generalized-arb" }
 bindings = { path = "../../crates/bindings" }
-config = { path = "../../crates/config" }
+provider = { path = "../../crates/provider" }
 shared = { path = "../../crates/shared" }
 engine = { path = "../../crates/engine" }
 
