--- a/bin/bot/Cargo.toml
+++ b/bin/bot/Cargo.toml
@@ -10,6 +10,7 @@ tokio = { workspace = true }
 eyre = { workspace = true }
 
 generalized-arb-strategy = { path = "../../crates/strategies/generalized-arb" }
+base-arb-strategy = { path = "../../crates/strategies/base-arb" }
 bindings = { path = "../../crates/bindings" }
 provider = { path = "../../crates/provider" }
 shared = { path = "../../crates/shared" }
