--- a/bin/cli/Cargo.toml
+++ b/bin/cli/Cargo.toml
@@ -19,6 +19,7 @@ types = { path = "../../crates/types" }
 engine = { path = "../../crates/engine" }
 addressbook = { path = "../../crates/addressbook" }
 provider = { path = "../../crates/provider" }
+amms = { path = "../../crates/amms" }
 
 anyhow = "1.0.70"
 clap = { version = "4.2.5", features = ["derive"] }
