--- a/crates/tx-simulator/Cargo.toml
+++ b/crates/tx-simulator/Cargo.toml
@@ -4,3 +4,25 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+alloy = { workspace = true }
+dotenv = { workspace = true }
+tokio = { workspace = true }
+eyre = { workspace = true }
+tracing = { workspace = true }
+alloy-primitives = { workspace = true }
+alloy-chains = { workspace = true }
+provider = { path = "../provider" }
+addressbook = { path = "../addressbook" }
+amms = { path = "../amms" }
+
+# alloy-rpc-types = { workspace = true }
+# foundry-config = { workspace = true }
+# alloy-sol-types = { workspace = true }
+# shared = { path = "../shared" }
+# odos-client = { path = "../odos-client" }
+# types = { path = "../types" }
+# amms = { path = "../amms" }
+# async-trait = "0.1.64"
+# futures = "0.3.27"
+# anyhow = "1.0.70"
+# tracing-subscriber = "0.3.16"
