feat - codex graphql api client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ members = [
     "crates/provider",
     "crates/config",
     "crates/lifi-client",
-    "crates/pool-manager", "crates/tx-simulator",
+    "crates/pool-manager",
+    "crates/tx-simulator",
+    "crates/codex-client",
 ]
 
 default-members = [
