--- a/crates/metadata/Cargo.toml
+++ b/crates/metadata/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 codex-client = { path = "../codex-client" }
 dotenv = "0.15.0"
 eyre = "0.6.0"
+tokio = { version = "1.0", features = ["full"] }
