--- a/crates/tx-simulator/Cargo.toml
+++ b/crates/tx-simulator/Cargo.toml
@@ -15,6 +15,7 @@ provider = { path = "../provider" }
 addressbook = { path = "../addressbook" }
 amms = { path = "../amms" }
 types = { path = "../types" }
+shared = { path = "../shared" }
 
 # alloy-rpc-types = { workspace = true }
 # foundry-config = { workspace = true }
