--- a/crates/strategies/base-arb/Cargo.toml
+++ b/crates/strategies/base-arb/Cargo.toml
@@ -28,7 +28,9 @@ dashmap = "6.0.1"
 shared = { path = "../../shared" }
 db = { path = "../../db" }
 types = { path = "../../types" }
+tx-simulator = { path = "../../tx-simulator" }
 alloy-sol-types = "0.8.1"
 diesel = { version = "2.0.0", features = ["postgres"] }
+
 [features]
 integration-tests = []
