--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,9 @@
 [submodule "crates/tx-simulator/contracts/lib/solmate"]
 	path = crates/tx-simulator/contracts/lib/solmate
 	url = https://github.com/transmissions11/solmate
+[submodule "crates/bindings/lib/forge-std"]
+	path = crates/bindings/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
+[submodule "crates/types/contracts/lib/forge-std"]
+	path = crates/types/contracts/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
