chore - upgrade to alloy 0.11.0 (removes transport dep)

--- a/bin/bot/Cargo.toml
+++ b/bin/bot/Cargo.toml
@@ -11,7 +11,7 @@ eyre = { workspace = true }
 
 generalized-arb-strategy = { path = "../../crates/strategies/generalized-arb" }
 base-arb-strategy = { path = "../../crates/strategies/base-arb" }
-bindings = { path = "../../crates/bindings" }
+# bindings = { path = "../../crates/bindings" }
 provider = { path = "../../crates/provider" }
 shared = { path = "../../crates/shared" }
 engine = { path = "../../crates/engine" }
