--- a/crates/addressbook/Cargo.toml
+++ b/crates/addressbook/Cargo.toml
@@ -17,7 +17,7 @@ dotenv = { workspace = true }
 once_cell = { workspace = true }
 lazy_static = "1.4.0"
 
-bindings = { path = "../bindings" }
+# bindings = { path = "../bindings" }
 types = { path = "../types" }
 db = { path = "../db" }
 diesel = { version = "2.0.0", features = ["postgres", "serde_json", "chrono"] }
