--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -8,7 +8,7 @@ alloy-primitives = { workspace = true }
 alloy-chains = { workspace = true }
 alloy = { workspace = true }
 alloy-rpc-types = { workspace = true }
-bindings = { path = "../bindings" }
+# bindings = { path = "../bindings" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 db = { path = "../db" }
