feat - most traded pools CLI feature

--- a/bin/cli/Cargo.toml
+++ b/bin/cli/Cargo.toml
@@ -21,6 +21,8 @@ addressbook = { path = "../../crates/addressbook" }
 provider = { path = "../../crates/provider" }
 amms = { path = "../../crates/amms" }
 tx-executor = { path = "../../crates/tx-executor" }
+codex-client = { path = "../../crates/codex-client" }
+pool-manager = { path = "../../crates/pool-manager" }
 
 anyhow = "1.0.70"
 clap = { version = "4.2.5", features = ["derive"] }
